# grafana-datafusion-datasource

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  drone.yml  rustfmt.toml
.config/: datafusion.ini  grafana.ini
crates/datafusion-test-datasource/: Cargo.toml  package.json  tsconfig.json
crates/datafusion-test-datasource/dashboards/: datafusion-example.json
crates/datafusion-test-datasource/pkg/: github.rs  main.rs
crates/datafusion-test-datasource/pkg/github/: pull_requests.rs  releases.rs
crates/datafusion-test-datasource/src/: datasource.ts  module.ts  plugin.json  types.ts
crates/datafusion-test-datasource/src/components/: QueryEditor.tsx
crates/grafana-plugin-sdk/: Cargo.toml  build.rs
crates/grafana-plugin-sdk/src/: datafusion.rs  lib.rs  plugin.rs  proto.rs  service.rs
crates/grafana-plugin-sdk/src/datafusion/: datasource.rs  execution_plan.rs  stream.rs  table_provider.rs
crates/grafana-plugin-sdk/src/plugin/: data.rs  diagnostic.rs
crates/grafana-plugin-sdk/src/service/: data.rs  diagnostic.rs
